feat: добавлен новый эндпоинт для выдачи все пользователей  с соответствующей документацией в Swagger и OpenAPI
